objects/Stage_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is substage completed</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <description>is stage completed</description>
        <formula>No_of_Completed_Substage__c ==  Number_of_Substage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Completed_Substage__c</fullName>
        <description>No of Completed Substage</description>
        <inlineHelpText>No of Completed Substage</inlineHelpText>
        <label>No of Completed Substage</label>
        <summaryForeignKey>Substage_Mapping1__c.Stage_Mapping__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Substage__c</fullName>
        <description>Number of Substage</description>
        <inlineHelpText>Number of Substage</inlineHelpText>
        <label>Number of Substage</label>
        <summaryForeignKey>Substage_Mapping1__c.Stage_Mapping__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stage Mappings</relationshipLabel>
        <relationshipName>Stage_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated playbook</description>
        <label>Playbook</label>
        <referenceTo>Playbook__c</referenceTo>
        <relationshipLabel>Stage Mappings</relationshipLabel>
        <relationshipName>Stage_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Background_Color__c</fullName>
        <description>stage background color</description>
        <formula>IF( No_of_Completed_Substage__c = Number_of_Substage__c,&apos;#99FF00&apos;,
       IF((AND((No_of_Completed_Substage__c &gt; 0) , (No_of_Completed_Substage__c &lt;  Number_of_Substage__c)) ),&apos;#FFCC00&apos;,
          &apos;#3333FF&apos;  )

   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Background Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <description>id of associated stage</description>
        <formula>Stage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Sort_Order__c</fullName>
        <description>sort order of stage</description>
        <formula>Stage__r.Stage_Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated stage</description>
        <label>Stage</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Stage Mappings</relationshipLabel>
        <relationshipName>Stage_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started?</label>
        <type>Checkbox</type>
    </fields>
    <label>Stage Mapping</label>
    <nameField>
        <displayFormat>SM-{0000000000}</displayFormat>
        <label>Stage Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>